Add Google Analytics tracking code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>My Capybara - The Ultimate Capybara Clicker Game</title>
     <link rel="canonical" href="https://capybaraonline.com/my-capybara" />
     <meta name="description" content="Embark on an exciting journey with the world's most adorable rodent in My Capybara, a delightful clicker game where you help your capybara friend thrive and grow!">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PRMTWEDPQT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-PRMTWEDPQT');
+    </script>
     <style>
         :root {
             --apple-blue: #007AFF;
