--- a/index.html
+++ b/index.html
@@ -175,43 +175,49 @@
 
         @media (max-width: 768px) {
             .container {
-                padding: 10px;
+                padding: 5px;
                 max-width: 100%;
             }
 
             .header {
-                padding: 10px;
+                padding: 5px;
+                margin-bottom: 5px;
             }
 
             .header h1 {
-                font-size: 1.5rem;
+                font-size: 1.2rem;
+                margin: 0;
             }
 
             .header p {
-                font-size: 0.9rem;
+                font-size: 0.8rem;
+                margin: 2px 0;
             }
 
             .game-container {
-                margin: 10px 0;
-                padding: 10px;
+                margin: 5px 0;
+                padding: 5px;
             }
 
             .game-frame {
-                height: 60vh;
-                min-height: 400px;
+                height: 75vh;
+                min-height: 500px;
+                width: 100%;
+                border: none;
             }
 
             .game-controls {
                 display: flex;
                 flex-wrap: wrap;
-                gap: 5px;
+                gap: 3px;
                 justify-content: center;
-                margin: 10px 0;
+                margin: 5px 0;
             }
 
             .game-controls button {
-                padding: 8px 12px;
-                font-size: 0.9rem;
+                padding: 5px 8px;
+                font-size: 0.8rem;
+                min-width: 80px;
             }
 
             .features {
@@ -227,44 +233,33 @@
             }
 
             .difficulty-selector {
-                margin: 10px 0;
+                margin: 5px 0;
             }
 
             .difficulty-selector select {
-                padding: 8px;
-                font-size: 0.9rem;
+                padding: 5px;
+                font-size: 0.8rem;
             }
         }
 
         @media (max-width: 480px) {
-            h1 {
-                font-size: 2rem;
-            }
-
-            .tagline {
+            .header h1 {
                 font-size: 1rem;
             }
 
-            .features {
-                grid-template-columns: 1fr;
-            }
-
-            .header h1 {
-                font-size: 1.2rem;
-            }
-
             .header p {
-                font-size: 0.8rem;
+                font-size: 0.7rem;
             }
 
             .game-frame {
-                height: 50vh;
-                min-height: 300px;
+                height: 80vh;
+                min-height: 400px;
             }
 
             .game-controls button {
-                padding: 6px 10px;
-                font-size: 0.8rem;
+                padding: 4px 6px;
+                font-size: 0.7rem;
+                min-width: 70px;
             }
         }
     </style>
